--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=Spring
 spring.data.mongodb.uri=${MONGODB_URI}
 logging.level.root=INFO
+logging.level.com.github.ramezch = DEBUG
